@@ -19,6 +19,7 @@ Marcin Gibuła <m.gibula at conecto.pl>
 Christophe Grenier <grenier at cgsecurity.org>
 Csaba Henk <csaba.henk at creo.hu>
 Ian Jackson <ian at davenant.greenend.org.uk>
+Max Khon <fjoe at samodelkin.net>
 Carmelo Kintana <kintana at berkeley.edu>
 Jan Kratochvil <project-captive at jankratochvil.net>
 Lode Leroy <lode_leroy at hotmail.com>
